--- a/dividing-lines/example.tex
+++ b/dividing-lines/example.tex
@@ -1,4 +1,4 @@
-\documentclass[aspectratio=169,usepdftitle=true,t]{beamer}
+\documentclass[aspectratio=169,usepdftitle=true]{beamer}
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -50,12 +50,6 @@
             \item[Prozess] Die Ausführung der Schritte eines Algorithmus
             \item[Prozessor] Der Ausführende (Mensch, Computer, \ldots)
             \item[Elementaroperation] Eine einzelne, eindeutige Handlung.
-        \end{description}
-        \item Ein Algorithmus besitzt einige Eigenschaften: \begin{description}[Ausführbarkeit]
-            \item[Ausführbarkeit] Die Anleitung muss ausführ- und reproduzierbar sein.
-            \item[Endlichkeit] Der gesamte Algorithmus muss mit endlich viel Text beschrieben werden können.
-            \item[Termination] Der Algorithmus muss nach endlich vielen Schritten zum Ende kommen.
-            \item[Verarbeitung] Ein Algorithmus erhält Eingabeobjekte \(E\), hält lokale Daten \(D\) und erzeugt Ausgabedaten \(A\).
         \end{description}
     \end{itemize}
 \end{frame}
