--- a/dividing-lines/example.tex
+++ b/dividing-lines/example.tex
@@ -44,6 +44,8 @@
     \lipsum[2]
 \end{frame}
 \subsection{Algorithmen analysieren}
+\makeatletter
+
 \begin{frame}{Algorithmuseigenschaften}
     \begin{itemize}
         \item Zu Beginn gilt es einige Begriffe zu klären: \begin{description}[Elementaroperation]
