--- a/dividing-lines/example.tex
+++ b/dividing-lines/example.tex
@@ -122,4 +122,40 @@
     World
 \end{frame}
 
+
+\section{Apfel}
+\begin{frame}{Mega-Example 1}
+    Hello
+\end{frame}
+
+\begin{frame}{Mega-Example 2}
+    World
+\end{frame}
+
+\section{Birne}
+\begin{frame}{Mega-Example 1}
+    Hello
+\end{frame}
+
+\begin{frame}{Mega-Example 2}
+    World
+\end{frame}
+
+\section{Tomate}
+\begin{frame}{Mega-Example 1}
+    Hello
+\end{frame}
+
+\begin{frame}{Mega-Example 2}
+    World
+\end{frame}
+
+\section{Gurke}
+\begin{frame}{Mega-Example 1}
+    Hello
+\end{frame}
+
+\begin{frame}{Mega-Example 2}
+    World
+\end{frame}
 \end{document}
