--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -159,10 +159,12 @@
 % zeige allgemein immer 5 und versuche aktuelle section zu zentrieren
 
 \AtBeginDocument{%
-    \pgfmathsetmacro\btdl@sectionmax@target@preview{int(min(4,\arabic{btdl@sectioncount}))}%
+    \pgfmathsetmacro\btdl@sectionmax@target@preview{int(min(6,\arabic{btdl@sectioncount}))}%
 }
 
-\def\btdl@footer@tsymb{\textcolor{btdl@color@primary}{\(\diamondsuit\)}}
+\def\btdl@footer@tsymb#1{\hyperlink{btdl@section.#1}{\textcolor{btdl@color@primary}{\ifnum\value{section}=#1 \(\blacklozenge\)\else\(\lozenge\)\fi}}}
+\def\btdl@printshort@lowforsec#1{\@nameuse{btdl@section@#1@content}}
+
 \def\btdl@typesetfiveforcurrent{%
 \ifnum\btdl@sectionmax@target@preview>0
     % get start index as sec-2
@@ -171,14 +173,19 @@
     % try to update lower if upper was capped
     \pgfmathsetmacro\btdl@sectionmax@target@start{int(max(1,\btdl@sectionmax@target@end-\btdl@sectionmax@target@preview))}%
     % TODO: hyperlinks zum Start und zum Ende draus machen: wenn erreicht reguär dann ausfüllen
-    \ifnum\btdl@sectionmax@target@start=1\relax\btdl@footer@tsymb~\fi
+    \btdl@footer@tsymb{\btdl@sectionmax@target@start}~\ifnum\btdl@sectionmax@target@start=1\else\hfill\fi
     % start: \btdl@sectionmax@target@start, end: \btdl@sectionmax@target@end
     \foreach \i in {\btdl@sectionmax@target@start,...,\btdl@sectionmax@target@end} {%
-        \ifnum\i>\btdl@sectionmax@target@start {~\faAngleRight~}\fi
-        \ifnum\i=\thesection\color{btdl@color@primary}\else\fi
-        \hyperlink{btdl@section.\i}{\@nameuse{btdl@section@\i @content}}%
+        \mbox{\pgfmathsetmacro\btld@disttotarget{int(min(100,max(10,30*abs(\i-\value{section}))))}%
+        \ifnum\i>\btdl@sectionmax@target@start
+            \pgfmathsetmacro\btld@disttotarget@last{int(min(100,max(10,30*abs(\i-\value{section}-1))))}%
+            {\color{lightgray!\btld@disttotarget@last!darkgray}\,~\faAngleRight~\,}\fi
+        \color{lightgray!\btld@disttotarget!darkgray}%
+        \ifnum\value{section}=\i \sbfamily\fi
+        \hyperlink{btdl@section.\i}{\btdl@printshort@lowforsec{\i}}}%
     }%
-    \ifnum\btdl@sectionmax@target@end=\value{btdl@sectioncount}\relax~\btdl@footer@tsymb\fi
+    \ifnum\value{btdl@sectioncount}=\btdl@sectionmax@target@end\else\hfill\fi
+    ~\btdl@footer@tsymb{\btdl@sectionmax@target@end}%
 \fi%
 }
 
